FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/Fitness_Trainer__c.object-meta.xml
<CustomObject>
    <description>List of Gym Trainers for Fitlife Pro</description>
    <label>Fitness Trainer</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fitness Trainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>