FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Assigned_Members__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Members__c</fullName>
    <label>Assigned Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>