FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Availability_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Availability_Schedule__c</fullName>
    <inlineHelpText>Please select any one of the slot.</inlineHelpText>
    <label>Availability Schedule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning Slot - 6am to 12pm</fullName>
            </value>
            <value>
                <fullName>Afternoon Slot - 12pm to 4pm</fullName>
            </value>
            <value>
                <fullName>Evening Slot - 4pm to 10pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>