FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACE Certified</fullName>
            </value>
            <value>
                <fullName>ISSA Certified</fullName>
            </value>
            <value>
                <fullName>NASM Certified</fullName>
            </value>
            <value>
                <fullName>NCSF Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>