FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Trainer Phone Number</description>
    <inlineHelpText>Phone number should be in numbers and can&#39;t exceed 10 digits</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>