FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Specialities__c.field-meta.xml
<CustomField>
    <fullName>Specialities__c</fullName>
    <label>Specialities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional Training</fullName>
            </value>
            <value>
                <fullName>HIIT Workout</fullName>
            </value>
            <value>
                <fullName>Pilates</fullName>
            </value>
            <value>
                <fullName>Strength Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>