FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Trainer_ID__c.field-meta.xml
<CustomField>
    <fullName>Trainer_ID__c</fullName>
    <displayFormat>FLP-T-{000}</displayFormat>
    <label>Trainer ID</label>
    <type>AutoNumber</type>
</CustomField>