FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/fields/Working_Status__c.field-meta.xml
<CustomField>
    <fullName>Working_Status__c</fullName>
    <description>Trainer is active or not</description>
    <label>Working Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>In-active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>