FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/validationRules/PhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneValidation</fullName>
    <active>true</active>
    <description>Phone number validation - India Number(10 digits)</description>
    <errorConditionFormula>NOT( OR( ISBLANK( Phone_Number__c ), REGEX( Phone_Number__c,&quot;(\\D?[0-9]{10})&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>