FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone_Number__c</columns>
    <columns>Specialities__c</columns>
    <columns>Assigned_Members__c</columns>
    <columns>Working_Status__c</columns>
    <columns>Availability_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>