FitLifeProLatest/force-app/main/default/objects/Fitness_Trainer__c/listViews/FitLifePro_Active_Trainers.listView-meta.xml
<ListView>
    <fullName>FitLifePro_Active_Trainers</fullName>
    <columns>Trainer_ID__c</columns>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Specialities__c</columns>
    <columns>Assigned_Members__c</columns>
    <columns>Working_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>FitLifePro Active Trainers</label>
</ListView>